--- a/web/index.html
+++ b/web/index.html
@@ -1,13 +1,53 @@
-<html>
+<!doctype html>
+<html lang="ja">
 
 <head>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
+
     <title>まとめてサクラチェッカー</title>
+
+    <nav class="navbar navbar-light bg-info">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="picture/icon.png" alt="" width="30" height="30" class="d-inline-block align-top">
+                まとめてサクラチェッカー
+            </a>
+        </div>
+    </nav>
+
 </head>
 
 <body>
+    <div class="jumbotron">
 
-    <script type="text/javascript" src='/eel.js'></script>
-    <script type="text/javascript" src='/index.js'></script>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="input-group">
+                    <input type="text" id="exportPath" class="form-control">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        $('input[id=lefile]').change(function () {
+            $('#photoCover').val($(this).val());
+        });
+    </script>
+    <script type="text/javascript" src="./eel.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
+
 </body>
 
 </html>
